packages/babel-plugin-minify-errors/__fixtures__/type-error/input.js
throw /* minify-error */ new TypeError(
  'MUI: Expected a valid string argument.',
);
throw /* minify-error */ new TypeError(`MUI: Invalid type provided.`);
